--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "@splidejs/splide": "^4.1.4"
-  }
-  "scripts": {
-    "start": "node ./bin"
   },
+  "scripts": {
+    "start": "node ./bin/index.js"
+  }
 }
